--- a/BootTest01/pom.xml
+++ b/BootTest01/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.rubypapar</groupId>
-	<artifactId>Chapter05</artifactId>
+	<artifactId>BootTest01</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Chapter05</name>
+	<name>BootTest01</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
